[tool.poetry]
name = "algo"
version = "0.1.0"
description = ""
authors = ["limoiie <limo.iie4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fire = "^0.5.0"
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"
pylint = "^3.0.3"
pyright = "^1.1.344"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
